# cap

./: .gitignore  .pdm-python  main.py  pyproject.toml
cogs/: msg.py  ping.py  reader.py
utils/: ai.py
utils/tools/: cwa.py  wiki.py
