[project]
name = "cap"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "watercat", email = "watercat0330@gmail.com"},
]
dependencies = ["py-cord>=2.6.1", "dotenv>=0.9.9", "openai>=1.72.0", "aiohttp>=3.11.16", "certifi>=2025.1.31", "wikipedia>=1.4.0"]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
